--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "engines": {
     "node": ">=0.6"
   },
-  "homepage": "https://github.com/Math-/esecurity/",
+  "homepage": "https://github.com/math-nao/esecurity/",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Math-/esecurity.git"
+    "url": "git://github.com/math-nao/esecurity.git"
   },
   "bugs": {
-    "url": "http://github.com/Math-/esecurity/issues"
+    "url": "http://github.com/math-nao/esecurity/issues"
   },
   "license": "MIT",
   "licenses": [
