--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esecurity",
-  "description": "Add security layer to express.",
-  "version": "0.0.1",
+  "description": "Add security layers to express.",
+  "version": "1.0",
   "author": "Mathieu Naouache <math.nao@outlook.com>",
   "keywords": [
     "express",
