--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
-    "generic-pool": "2.x"
+    "generic-pool": "^3.1.7"
   },
   "scripts": {
     "test": "make test"
