--- a/package.json
+++ b/package.json
@@ -41,10 +41,8 @@
     "should": "^11.2.1",
     "supertest": "^3.0.0"
   },
-  "dependencies": {
-    "generic-pool": "^3.1.7"
-  },
   "scripts": {
     "test": "make test"
-  }
+  },
+  "dependencies": {}
 }
